--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>LifeLine - AI Assisted Medical Aid</title>
   </head>
   <body>
+    <div id="privacy-policy"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
