--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="privacy-policy"></div>
+    <div id="tour"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
